 $Id: ChangeLog,v 1.203.2.2 2012/01/29 03:33:05 uehira Exp $

2012-01-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/timsac.[ch] : split TIMSAC codes from 'win.c'.

2011-12-01  TSURUOKA Hiroshi (tsuru@eri.u-tokyo.ac.jp)
	* Version 2.2.2 released.
	* src/wintowin.c : bug fixed.

2011-11-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.2.1 released.
	* win_m : added '-g' oprtion. pass invalid channels table.

2011-11-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : added '-g' oprtion. pass invalid channels table.
	* recvt46 : added '-4' and '-6' options.
	* libwinlog : bump version.

2011-11-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt46 : fixed a bug.

2011-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.2.0 released.
	* win_m : fixed 'Next' and 'Previous' bottons.

2011-09-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.29 released.
	* prog/ck_ls8800cst : added '-t' option.

2011-09-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/ck_ls8800cst : added.

2011-08-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.28 released.
	* src/win.c : check channels table.
	* src/chtbl_ck.c : added.
	* man/chtbl_ck.1 : added.

2011-07-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.27 released.
	* man/win.1 : updated
	* man/pmon.1 : fixed a typo

2011-07-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.26 released.
	* src/udp_dest.c : IPv6 MTU Option : always perform path MTU discovery.

2011-07-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.25 released.
	* src/recvt46.c : fixed a bug.
	* src/send_raw46.c : removed obsoleted codes.
	* daemon_mode : fixed scope.

2011-06-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.24 (rel-64bit_SEVO tag) merged into SEVO branch.

2011-05-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.24 released.
	* imported 'wincat' and 'shmsimu'